Added undo and redo actions